<resources>
    <string name="app_name">NIDScanner</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="scan_id">Scan ID</string>
    <string name="id_card">ID Card</string>
    <string name="id_scanner">ID Scanner</string>
    <string name="id_type">ID Type</string>
    <string name="id_number">ID Number</string>
    <string name="expire_date">Expire Date</string>
    <string name="detail">Detail</string>
    <string name="continue_string">continue</string>
    <string name="requirements">Requirements</string>
    <string name="face_finger_recognition">Face/Finger Recognition</string>
    <string name="personal_information">Personal Information</string>
    <string name="your_original_valid_kh_id">Your original valid Khmer ID</string>
    <string name="one_last_step">One last Step</string>
    <string name="you_are_ready_to_go">You\'re Ready to Go.</string>
    <string name="finish">Finish</string>
    <string name="msg_scanning_in_rectangle">Place the card in scanning rectangle</string>
    <string name="title_activity_citizen_information">CitizenInformationActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="home">Home</string>
</resources>