<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/frenchPlum">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/continueTextView"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/fab_margin"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginBottom="@dimen/fab_margin"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/montserrat_bold"
        android:maxLines="1"
        android:text="@string/continue_string"
        android:textColor="@color/frenchPlum"
        app:cornerRadius="25dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:orientation="vertical"
        android:padding="@dimen/fab_margin"
        tools:context=".ui.main.MainActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_bold"
            android:gravity="center"
            android:text="@string/scan_id"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/requirements"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fab_margin">

            <ImageView
                android:layout_width="@dimen/d24"
                android:layout_height="@dimen/d24"
                android:src="@drawable/ic_face_finger" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/d24"
                android:fontFamily="@font/montserrat_regular"
                android:gravity="center_vertical"
                android:text="@string/face_finger_recognition"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fab_margin">

            <ImageView
                android:layout_width="@dimen/d24"
                android:layout_height="@dimen/d24"
                android:src="@drawable/ic_idcard" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/d24"
                android:fontFamily="@font/montserrat_regular"
                android:gravity="center_vertical"
                android:text="@string/id_scanner"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fab_margin">

            <ImageView
                android:layout_width="@dimen/d24"
                android:layout_height="@dimen/d24"
                android:src="@drawable/ic_information" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/d24"
                android:fontFamily="@font/montserrat_regular"
                android:gravity="center_vertical"
                android:text="@string/personal_information"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fab_margin"
            android:src="@drawable/id_card_information" />

        <FrameLayout
            android:id="@+id/cameraLayout"
            android:layout_width="@dimen/d52"
            android:layout_height="@dimen/d52"
            android:layout_gravity="center"
            android:layout_marginTop="58dp"
            android:background="@drawable/bgcircle">

            <ImageView
                android:layout_width="@dimen/d24"
                android:layout_height="@dimen/d24"
                android:layout_gravity="center"
                android:src="@drawable/ic_camera" />
        </FrameLayout>
    </LinearLayout>

</RelativeLayout>